[lworld] SIGSEGV in MemNode::find_previous_store

XMLWordPrintable

      Only reproduces on AVX-512 VLBW capable machines (for example, Intel(R) Xeon(R) Gold 6354).

      # A fatal error has been detected by the Java Runtime Environment:
      #
      # SIGSEGV (0xb) at pc=0x00007f25d2d17e90, pid=26838, tid=26865
      #

      --------------- T H R E A D ---------------

      Current thread (0x00007f25cc2b0e30): JavaThread "C2 CompilerThread0" daemon [_thread_in_native, id=26865, stack(0x00007f25b09fa000,0x00007f25b0afb000)]


      Current CompileTask:
      C2: 1248 1885 ! 4 sun.security.ssl.SSLCipher$T13GcmReadCipherGenerator$GcmReadCipher::decrypt (524 bytes)

      Stack: [0x00007f25b09fa000,0x00007f25b0afb000], sp=0x00007f25b0af6a70, free space=1010k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0xba8e90] MemNode::find_previous_store(PhaseTransform*)+0x620
      V [libjvm.so+0xbb2c85] StoreNode::Identity(PhaseGVN*)+0x75
      V [libjvm.so+0xc94461] PhaseIterGVN::transform_old(Node*)+0x191
      V [libjvm.so+0xc90a18] PhaseIterGVN::optimize()+0x118
      V [libjvm.so+0xb15161] PhaseMacroExpand::expand_macro_nodes()+0x731
      V [libjvm.so+0x5cd357] Compile::Optimize()+0x16d7
      V [libjvm.so+0x5ce49a] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, bool, DirectiveSet*)+0xe9a
      V [libjvm.so+0x505479] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0xe9
      V [libjvm.so+0x5d7451] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xd71
      V [libjvm.so+0x5d7fe8] CompileBroker::compiler_thread_loop()+0x4b8
      V [libjvm.so+0xe004d0] JavaThread::thread_main_inner()+0xd0
      V [libjvm.so+0xe03aee] Thread::call_run()+0xde
      V [libjvm.so+0xc425f1] thread_native_entry(Thread*)+0xe1

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: