8271330: [lworld] SIGSEGV in MemNode::find_previous_store